labs/vpc/01-public-and-private-subnets/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "${var.stack_name}-vpc"
    Component = "vpc"
  }
}
